<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="4dp">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:text="@string/n_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textN_order"
                />
            <TextView
                android:id="@+id/orderNumberL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textN_order"
                android:layout_marginLeft="@dimen/second_column_margin"
                android:text="" />

            <TextView
                android:text="@string/customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orderNumberL"
               />
            <TextView
                android:id="@+id/customerL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orderNumberL"
                android:layout_toRightOf="@+id/textN_order"
                android:layout_marginLeft="@dimen/second_column_margin"
                android:text=""/>

            <TextView
                android:text="@string/сustomer_addres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customerL"
               />
            <TextView
                android:id="@+id/customerAddressL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customerL"
                android:layout_toRightOf="@+id/textN_order"
                android:layout_marginLeft="@dimen/second_column_margin"
                android:text=""/>


            <TextView
                android:text="@string/delivery_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customerAddressL"
               />
            <TextView
                android:id="@+id/deliveryTimeL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customerAddressL"
                android:layout_toRightOf="@+id/textN_order"
                android:layout_marginLeft="@dimen/second_column_margin"
                android:text=""/>


            <TextView
                android:text="@string/arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deliveryTimeL"
                />
            <TextView
                android:id="@+id/arrivalTimeL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deliveryTimeL"
                android:layout_toRightOf="@+id/textN_order"
                android:layout_marginLeft="@dimen/second_column_margin"
                android:text="" />

            <TextView
                android:text="@string/shipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/arrivalTimeL"
                />
            <TextView
                android:id="@+id/shipmentL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/arrivalTimeL"
                android:layout_toRightOf="@+id/textN_order"
                android:layout_marginLeft="@dimen/second_column_margin"
                android:text="" />



        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
