<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".WaybillActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <ImageButton
                    android:id="@+id/imButBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/button_back" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imButBack"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:text="@string/n_order" />

                <TextView
                    android:id="@+id/orderNumberS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imButBack"
                    android:layout_marginLeft="@dimen/second_column_margin"
                    android:layout_toRightOf="@+id/textView5"
                    android:text="" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/orderNumberS"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:text="@string/customer" />

                <TextView
                    android:id="@+id/customerS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/orderNumberS"
                    android:layout_marginLeft="@dimen/second_column_margin"
                    android:layout_toRightOf="@+id/textView5"
                    android:text="" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/customerS"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:text="@string/сustomer_addres" />

                <TextView
                    android:id="@+id/customerAddressS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/customerS"
                    android:layout_marginLeft="@dimen/second_column_margin"
                    android:layout_toRightOf="@+id/textView5"
                    android:text="" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/customerAddressS"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:text="@string/delivery_time" />

                <TextView
                    android:id="@+id/deliveryTimeS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/customerAddressS"
                    android:layout_marginLeft="@dimen/second_column_margin"
                    android:layout_toRightOf="@+id/textView5"
                    android:text="" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/deliveryTimeS"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:text="@string/arrival" />

                <TextView
                    android:id="@+id/arrivalTimeS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/deliveryTimeS"
                    android:layout_marginLeft="@dimen/second_column_margin"
                    android:layout_toRightOf="@+id/textView5"
                    android:text="" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/arrivalTimeS"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:text="@string/shipment" />

                <TextView
                    android:id="@+id/shipmentS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/arrivalTimeS"
                    android:layout_marginLeft="@dimen/second_column_margin"
                    android:layout_toRightOf="@+id/textView5"
                    android:text="" />

                <ImageButton
                    app:srcCompat="@drawable/button_shipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/orderNumberS"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/imButShipment" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/button_location"
                    android:layout_above="@+id/orderNumberS"
                    android:layout_toLeftOf="@+id/imButShipment"
                    android:layout_toStartOf="@+id/imButShipment"
                    android:id="@+id/imButLocation" />
            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:foregroundGravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal">


            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/number_good" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/name_good" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/unit_good" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/сount_good" />

        </LinearLayout>


    </android.support.design.widget.AppBarLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/fab"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="@dimen/fab_margin"-->
    <!--app:layout_anchor="@id/app_bar"-->
    <!--app:layout_anchorGravity="bottom|end"-->
    <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_goods"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.AppRecyclerView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >


    </android.support.v7.widget.RecyclerView>

    <!--<android.support.v4.view.ViewPager-->
        <!--android:id="@+id/pager"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<android.support.v4.view.PagerTabStrip-->
            <!--android:id="@+id/pagerTabStrip"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="top">-->
        <!--</android.support.v4.view.PagerTabStrip>-->
    <!--</android.support.v4.view.ViewPager>-->


</android.support.design.widget.CoordinatorLayout>
